Revert "API changes for go gremlin"
This reverts commit 938d2ebf90bb3f18a45e31806505f61ce1d687ef.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,10 @@ before_install:
     - cp conf/* apache-tinkerpop-gremlin-server-3.2.4/conf
     - cd apache-tinkerpop-gremlin-server-3.2.4
     - bin/gremlin-server.sh conf/gremlin-server-contrail.yaml &
-    - go get github.com/Masterminds/glide
     - cd ../gremlin-sync
 
-install:
-    - glide install
-
 script:
-    - go test -v
+    - go test -v ./...
     - go build -v
 
 after_success:
