--- a/gremlin-fsck/requirements.txt
+++ b/gremlin-fsck/requirements.txt
@@ -1,2 +1,3 @@
+requests>=2.14.2
 git+https://github.com/cloudwatt/contrail-api-cli.git
 git+https://github.com/cloudwatt/contrail-api-cli-extra.git
